--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <application
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+package="com.example.responsive_ui">    <application
         android:label="responsive_ui"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
